fixed current day border color not showing

--- a/src/Components/Day/Day.css
+++ b/src/Components/Day/Day.css
@@ -1,5 +1,5 @@
 .day {
-    border: 1px solid darkgray;
+    /* border: 1px solid darkgray; */
     border-radius: 15px;
     width: 137.14px;
     height: 137.14px;
